# Dullahan

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  testing_fakes.py
apps/agent-runtime/: README.md
apps/agent-runtime/src/agent_runtime/: __init__.py  agent.py  aggregation.py  artifacts.py  cli.py  collections.py  config.py  models.py  recursion.py  tracing.py
apps/agent-runtime/src/agent_runtime/planning/: __init__.py  provider.py  subquery_generator.py
apps/agent-runtime/src/agent_runtime/tools/: __init__.py  http.py  http_cal.py  http_edl.py  local_cal.py  local_edl.py
apps/agent-runtime/tests/: test_agent_runtime.py  test_aggregation.py  test_artifacts.py  test_cli.py  test_http_tools.py  test_planner_provider.py
apps/cal/: README.md
apps/cal/src/cal/: __init__.py  config.py  main.py  server.py  service.py
apps/cal/tests/: test_cal_openai_provider.py  test_context_augmentation.py  test_context_budget.py
apps/edl/: README.md
apps/edl/src/edl/: __init__.py  config.py  main.py  server.py  service.py
apps/edl/tests/: test_edl_openai_provider.py  test_expert_dispatch.py  test_expert_runner.py
apps/graph-builder/: README.md
apps/graph-builder/src/graph_builder/: __init__.py  cluster.py  experts.py  graphify.py
apps/graph-builder/tests/: test_cluster_builder.py  test_postgres_ingestion.py
apps/inference/: README.md
apps/inference/scripts/: benchmark_gguf.py
apps/inference/src/dullahan_inference/: __init__.py  api.py  benchmark.py  benchmark_cli.py  cli.py  config.py  device.py  model_server.py  ollama.py  plan.py  tokenizer.py
apps/inference/tests/: test_benchmark.py  test_device.py  test_inference_cli.py  test_inference_config.py  test_local_gguf_benchmark.py  test_local_inference.py  test_model_server.py  test_ollama.py  test_tokenizer.py
apps/mcp-servers/: README.md
apps/mcp-servers/src/dullahan_mcp/: __init__.py  handlers.py  server_factories.py  stdio.py
apps/mcp-servers/tests/: test_mcp_handlers.py
apps/model-server/: .dockerignore  .env.example  Dockerfile.cpu  Dockerfile.cuda  NOTICE  README.md  THIRD_PARTY_NOTICES.md  compose.cpu.yaml  compose.cuda.yaml
apps/model-server/scripts/: build-base.sh
apps/model-server/server/: __init__.py  app.py  entrypoint.sh  requirements.txt
apps/model-server/tests/: test_model_manager.py  test_model_server_assets.py
configs/: inference.yaml  local.yaml  recursion.yaml  retrieval.yaml  routing.yaml
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
mcp/servers/: cal_server.yaml  edl_server.yaml
mcp/tools/: send_to_cal.yaml  send_to_edl.yaml
memory/documents/clusters/: cluster__agent_execution.md  cluster__context_memory.md  cluster__expert_dispatch.md  cluster__knowledge_graph.md
memory/documents/nodes/: concept__agent_runtime.md  concept__cal.md  concept__edl.md  concept__expert_pool.md  concept__knowledge_graph_memory.md  concept__world_state_db.md
memory/graph/: clusters.yaml  experts.yaml  graph.yaml
notebooks/: dullahan_production_benchmark.ipynb
scripts/: __init__.py  build_graph_clusters.py  install_graphify_auto_publish.py  publish_graphify_update.py
tests/: test_graphify_auto_publish.py  test_licensing.py  test_local_service_orchestration.py  test_seed_memory.py
(+18 files in other folders)
