[project]
name = "dullahan"
version = "0.1.0"
description = "Hierarchical agent execution over knowledge graph context memory."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "pydantic>=2.7,<3",
  "pyyaml>=6.0,<7",
  "uvicorn>=0.30,<1",
]

[project.scripts]
dullahan-agent = "agent_runtime.cli:main"
dullahan-cal = "cal.server:main"
dullahan-edl = "edl.server:main"
dullahan-mcp-cal = "dullahan_mcp.server_factories:cal_stdio_main"
dullahan-mcp-edl = "dullahan_mcp.server_factories:edl_stdio_main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[tool.pytest.ini_options]
pythonpath = [
  "apps/cal/src",
  "apps/edl/src",
  "apps/agent-runtime/src",
  "apps/mcp-servers/src",
  "apps/graph-builder/src",
  "packages/shared/src",
  "packages/kg/src",
  "packages/world-state/src",
]
testpaths = [
  "apps/mcp-servers/tests",
  "apps/agent-runtime/tests",
  "apps/cal/tests",
  "apps/edl/tests",
  "apps/graph-builder/tests",
  "packages/shared/tests",
  "packages/kg/tests",
  "packages/world-state/tests",
  "tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
