[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dullahan"
version = "0.1.0"
description = "Hierarchical agent execution over knowledge graph context memory."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "graphifyy",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.7,<3",
  "pyyaml>=6.0,<7",
  "uvicorn>=0.30,<1",
]

[project.scripts]
dullahan-agent = "agent_runtime.cli:main"
dullahan-cal = "cal.server:main"
dullahan-edl = "edl.server:main"
dullahan-inference = "dullahan_inference.cli:main"
dullahan-benchmark-gguf = "dullahan_inference.benchmark_cli:main"
dullahan-mcp-cal = "dullahan_mcp.server_factories:cal_stdio_main"
dullahan-mcp-edl = "dullahan_mcp.server_factories:edl_stdio_main"
dullahan-graphify = "graph_builder.graphify:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "huggingface-hub>=0.27,<2",
  "python-multipart>=0.0.20,<1",
  "pytest>=7.4,<8",
]

[tool.setuptools.packages.find]
where = [
  "apps/cal/src",
  "apps/edl/src",
  "apps/agent-runtime/src",
  "apps/mcp-servers/src",
  "apps/graph-builder/src",
  "apps/inference/src",
  "packages/shared/src",
  "packages/kg/src",
  "packages/world-state/src",
]

[tool.pytest.ini_options]
markers = [
  "local_inference: runs a real local inference model and is opt-in",
]
pythonpath = [
  "apps/cal/src",
  "apps/edl/src",
  "apps/agent-runtime/src",
  "apps/mcp-servers/src",
  "apps/graph-builder/src",
  "apps/inference/src",
  "apps/model-server",
  "packages/shared/src",
  "packages/kg/src",
  "packages/world-state/src",
]
testpaths = [
  "apps/mcp-servers/tests",
  "apps/agent-runtime/tests",
  "apps/cal/tests",
  "apps/edl/tests",
  "apps/graph-builder/tests",
  "apps/inference/tests",
  "apps/model-server/tests",
  "packages/shared/tests",
  "packages/kg/tests",
  "packages/world-state/tests",
  "tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
